Update results of the models' evaluation